cups (1.3.10-3) UNRELEASED; urgency=low

  * debian/filters/pstopdf: Make it also correctly working if PaperDimension
    and ImageableArea entries in the PPD have no translation strings. Thanks
    to Koji Otani to find the bug.
  * debian/local/filters/pdf-filters/pdftoopvp/,
    debian/local/filters/pdf-filters/README,
    debian/local/filters/pdf-filters/addtocups,
    debian/local/filters/pdf-filters/removefromcups,
    debian/local/filters/pdf-filters/config-scripts/cups-pdf-filters.m4:
    Added pdftoopvp CUPS filter as part of the PDF filter add-on.
  * debian/cups.install: Make /etc/fonts/conf.d/99pdftoopvp.conf of pdftoopvp
    be installed as part of the cups package
  * debian/control: Added build dependencies needed by pdftoopvp: liblcms1-dev,
    libfreetype6-dev, libfontconfig1-dev
  * debian/control: Moved dependency on cups-client to Depends:, as
    cups-client is needed by the post-install script for the update of the
    PPDs of existing print queues.
  * debian/cups.postinst: Case-insensitive check for model names when updating
    PPDs of already existing print queues.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Wed,  3 Jun 2009 00:00:00 +0200

cups (1.3.10-2) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/pdftopdf/P2PFont.cxx: Make the pdftopdf
    filter also building with Poppler 0.11.0.
  * debian/filters/pstopdf: Make pstopdf also reading default values from the
    PPD if there is no space between the colon and the value. Some programs
    seem to remove this space when setting the defaults. Fixes problem of
    Shaun Crampton in LP: #357732.

  [ Martin Pitt ]
  * debian/control: Lift cups-driver-gutenprint from Suggests to Recommends,
    it's needed by many printers and not very large. (Closes: #522428)
  * debian/control: Drop cups-bsd's Recommends: cups to a Suggests:. Client
    packages shouldn't pull in the server by default. (Closes: #529630)
  * debian/libcups2.dirs: Drop, obsolete.